// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`infiniteloading base 01 1`] = `
<div>
  <div
    class="nut-infiniteloading nut-infiniteloading-default"
    data-status="idle"
  >
    <div
      class="nut-infinite-top"
      style="height: 0px; transition: height 0.2s cubic-bezier(0.25,0.1,0.25,1);"
    >
      <div
        class="nut-infinite-top-tips"
      >
        松开刷新
      </div>
    </div>
    <div
      class="nut-infinite-container"
    />
    <div
      class="nut-infinite-bottom"
    >
      <div
        class="nut-infinite-bottom-tips"
      >
        <div
          class="nut-infinite-bottom-icon"
        >
          <img
            alt=""
            src="https://img13.360buyimg.com/imagetools/jfs/t1/531639/14/4869/43793/0050ef01F4f6336ae/03e60c80c8d6f2c2.gif"
          />
        </div>
        <div
          class="nut-infinite-bottom-text"
        >
          上滑更多加载
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`infiniteloading base 02 1`] = `
<div>
  <div
    class="nut-infiniteloading nut-infiniteloading-default"
    data-status="loading"
  >
    <div
      class="nut-infinite-top"
      style="height: 0px; transition: height 0.2s cubic-bezier(0.25,0.1,0.25,1);"
    >
      <div
        class="nut-infinite-top-tips"
      >
        松开刷新
      </div>
    </div>
    <div
      class="nut-infinite-container"
    >
      <li
        class="infiniteLi"
      >
        0
      </li>
      <li
        class="infiniteLi"
      >
        1
      </li>
      <li
        class="infiniteLi"
      >
        2
      </li>
      <li
        class="infiniteLi"
      >
        3
      </li>
      <li
        class="infiniteLi"
      >
        4
      </li>
      <li
        class="infiniteLi"
      >
        5
      </li>
      <li
        class="infiniteLi"
      >
        6
      </li>
      <li
        class="infiniteLi"
      >
        7
      </li>
      <li
        class="infiniteLi"
      >
        8
      </li>
      <li
        class="infiniteLi"
      >
        9
      </li>
    </div>
    <div
      class="nut-infinite-bottom"
    >
      <div
        class="nut-infinite-bottom-tips"
      >
        <div
          class="nut-infinite-bottom-icon"
        >
          <img
            alt=""
            src="https://img13.360buyimg.com/imagetools/jfs/t1/531639/14/4869/43793/0050ef01F4f6336ae/03e60c80c8d6f2c2.gif"
          />
        </div>
        <div
          class="nut-infinite-bottom-text"
        >
          加载中
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pull base 01 1`] = `
<div>
  <div
    class="nut-infiniteloading nut-infiniteloading-default"
    data-status="idle"
  >
    <div
      class="nut-infinite-top"
      style="height: 10px; transition: height 0.2s cubic-bezier(0.25,0.1,0.25,1);"
    >
      <div
        class="nut-infinite-top-tips"
      >
        下拉刷新
      </div>
    </div>
    <div
      class="nut-infinite-container"
    />
    <div
      class="nut-infinite-bottom"
    >
      <div
        class="nut-infinite-bottom-tips"
      >
        <div
          class="nut-infinite-bottom-icon"
        >
          <img
            alt=""
            src="https://img13.360buyimg.com/imagetools/jfs/t1/531639/14/4869/43793/0050ef01F4f6336ae/03e60c80c8d6f2c2.gif"
          />
        </div>
        <div
          class="nut-infinite-bottom-text"
        >
          上滑更多加载
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pull base 03 1`] = `
<div>
  <div
    class="nut-infiniteloading nut-infiniteloading-default"
    data-status="idle"
  >
    <div
      class="nut-infinite-top"
      style="height: 0px; transition: height 0.2s cubic-bezier(0.25,0.1,0.25,1);"
    >
      <div
        class="nut-infinite-top-tips"
      >
        下拉刷新
      </div>
    </div>
    <div
      class="nut-infinite-container"
    />
    <div
      class="nut-infinite-bottom"
    >
      <div
        class="nut-infinite-bottom-tips"
      >
        <div
          class="nut-infinite-bottom-icon"
        >
          <img
            alt=""
            src="https://img13.360buyimg.com/imagetools/jfs/t1/531639/14/4869/43793/0050ef01F4f6336ae/03e60c80c8d6f2c2.gif"
          />
        </div>
        <div
          class="nut-infinite-bottom-text"
        >
          上滑更多加载
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pull base 03 2`] = `
<div>
  <div
    class="nut-infiniteloading nut-infiniteloading-default"
    data-status="idle"
  >
    <div
      class="nut-infinite-top"
      style="height: 0px; transition: height 0.2s cubic-bezier(0.25,0.1,0.25,1);"
    >
      <div
        class="nut-infinite-top-tips"
      >
        下拉刷新
      </div>
    </div>
    <div
      class="nut-infinite-container"
    />
    <div
      class="nut-infinite-bottom"
    >
      <div
        class="nut-infinite-bottom-tips"
      >
        <div
          class="nut-infinite-bottom-icon"
        >
          <img
            alt=""
            src="https://img13.360buyimg.com/imagetools/jfs/t1/531639/14/4869/43793/0050ef01F4f6336ae/03e60c80c8d6f2c2.gif"
          />
        </div>
        <div
          class="nut-infinite-bottom-text"
        >
          上滑更多加载
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pull base 1`] = `
<div>
  <div
    class="nut-infiniteloading nut-infiniteloading-default"
    data-status="idle"
  >
    <div
      class="nut-infinite-top"
      style="height: 10px; transition: height 0.2s cubic-bezier(0.25,0.1,0.25,1);"
    >
      <div
        class="nut-infinite-top-tips"
      >
        松开刷新
      </div>
    </div>
    <div
      class="nut-infinite-container"
    />
    <div
      class="nut-infinite-bottom"
    >
      <div
        class="nut-infinite-bottom-tips"
      >
        <div
          class="nut-infinite-bottom-icon"
        >
          <img
            alt=""
            src="https://img13.360buyimg.com/imagetools/jfs/t1/531639/14/4869/43793/0050ef01F4f6336ae/03e60c80c8d6f2c2.gif"
          />
        </div>
        <div
          class="nut-infinite-bottom-text"
        >
          上滑更多加载
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pull base 2`] = `
<div>
  <div
    class="nut-infiniteloading nut-infiniteloading-default"
    data-status="idle"
  >
    <div
      class="nut-infinite-top"
      style="height: 10px; transition: height 0.2s cubic-bezier(0.25,0.1,0.25,1);"
    >
      <div
        class="nut-infinite-top-tips"
      >
        松开刷新
      </div>
    </div>
    <div
      class="nut-infinite-container"
    />
    <div
      class="nut-infinite-bottom"
    >
      <div
        class="nut-infinite-bottom-tips"
      >
        <div
          class="nut-infinite-bottom-icon"
        >
          <img
            alt=""
            src="https://img13.360buyimg.com/imagetools/jfs/t1/531639/14/4869/43793/0050ef01F4f6336ae/03e60c80c8d6f2c2.gif"
          />
        </div>
        <div
          class="nut-infinite-bottom-text"
        >
          上滑更多加载
        </div>
      </div>
    </div>
  </div>
</div>
`;
